--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
 
     <!-- Hero Section Start -->
     <section class="hero" id="home">
-      <main class="content">
-        <h2>Hi</h2>
-        <h3>Im <span>Farid</span>a Front developer</h3>
+      <div class="home-content">
+        <h3>Hi</h3>
+        <h1>
+          I'm <span>Farid<br /></span> a Frontend Developer
+        </h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium,
-          odit.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste natus
+          quos odio nihil iure sit quaerat corrupti consequatur. Sapiente, ea?
         </p>
-      </main>
+      </div>
+
+      <div class="img-box"><img src="\img\img-profil.jpg" alt="" /></div>
     </section>
     <!-- Hero Section End -->
 
